--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">TicTacToeAndroid</string>
     <string name="enemy_user_cpu">Enemy CPU</string>
+    <string name="player1_name">player X</string>
+    <string name="player2_name">player O</string>
+    <string name="x0y0">x0y0</string>
+    <string name="next_turn">\"Next turn: \"</string>
 </resources>
